--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,3 +6,4 @@ jobs:
     steps:
       - run: echo "Hello Contributor!"
       - run: echo "Thanks for pushing changes."
+      - run: touch t1.txt
