--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,5 +4,5 @@ jobs:
   print-hello: 
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Hello Contributor!"
-      - run: echo "Thanks for pushing changes."
+      - uses: actions/checkout@v2
+      - run: ls
