--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,4 +5,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: touch t1.txt
+      - uses: actions/setup-node@v2
+        with: 
+          node-version: '14.17.0'
+      - name: Install node-modules
+        run: yarn
+      - name: Build the project
+        run: yarn build
+      - name: Success
+        run: echo "Build finish!"  
